Changes for Labyrinth-Paths
===========================

0.02    2015-02-23
        - fixed parser.
        - extended funcional test suite.

0.01    2015-02-22
        - first version.