@@ -1,6 +1,9 @@
 Changes for Labyrinth-Paths
 ===========================
 
+        - updated Abstract.
+        - updated documentation.
+
 0.02    2015-02-23
         - fixed parser.
         - extended funcional test suite.
